@@ -474,6 +474,11 @@ if (isset($eventticketid)) {
     $event['ticket'] = $LMS->getTickets($eventticketid);
     $event['customerid'] = $event['ticket']['customerid'];
     $event['customername'] = $event['ticket']['customername'];
+    if (ConfigHelper::checkConfig('phpui.copy_ticket_summary_to_assigned_event', 'false')) {
+        $event['title'] = $event['ticket']['name'];
+        $message = $LMS->GetFirstMessage($event['ticketid']);
+        $event['description'] = $message['body'];
+    }
 }
 
 if (isset($_GET['customerid'])) {
