@@ -242,6 +242,8 @@ version 25-git (????-??-??):
   - improvement: redesigned related and parent ticket selection user interface [chilan]
   - improvement: redesigned ticket event assignment selection [chilan]
   - enhancement: filtering nodes by 'without radio sector' cryterion [chilan]
+  - improvement: 'phpui.copy_ticket_summary_to_assigned_event' ('false' by default) controls
+    if assigned ficket properties are copied to newly created event [chilan]
 
 version 24.0 (2019-05-16):
 
